--- a/i3/config
+++ b/i3/config
@@ -57,7 +57,7 @@ exec --no-startup-id nutstore
 exec --no-startup-id copyq
 exec --no-startup-id nitrogen --restore
 exec --no-startup-id picom -b
-exec --no-startup-id /home/mir/.config/i3/bin/i3bar
+exec --no-startup-id $HOME/.config/i3/bin/i3bar
 
 
 # Use pactl to adjust volume in PulseAudio.
@@ -101,7 +101,6 @@ assign [class="TelegramDesktop"] $ws8
 # for_window floating settings
 for_window [class="xdman-Main"] floating enable
 for_window [class="java-lang-Thread"] floating enable
-for_window [class="deepin-system-monitor"] floating enable
 for_window [class="VirtualBox Manager"] floating enable
 for_window [class="Qq"] floating enable
 for_window [class="Lxappearance"] floating enable
@@ -145,12 +144,12 @@ set $ides "[c]ode [i]dea c[l]ion [g]oland [d]atagrip"
 bindsym $mod+i mode $ides
 mode $ides {
   bindsym c exec --no-startup-id "i3-msg 'workspace 2; exec code; mode \\"default\\"'"
-  bindsym i exec --no-startup-id "i3-msg 'workspace 2; exec /home/mir/.local/bin/idea; mode \\"default\\"'"
-  bindsym g exec --no-startup-id "i3-msg 'workspace 2; exec /home/mir/.local/bin/goland; mode \\"default\\"'"
-  bindsym p exec --no-startup-id "i3-msg 'workspace 2; exec /home/mir/.local/bin/pycharm; mode \\"default\\"'"
-  bindsym l exec --no-startup-id "i3-msg 'workspace 2; exec /home/mir/.local/bin/clion; mode \\"default\\"'"
-  bindsym w exec --no-startup-id "i3-msg 'workspace 2; exec /home/mir/.local/bin/webstorm; mode \\"default\\"'"
-  bindsym d exec --no-startup-id "i3-msg 'workspace 2; exec /home/mir/.local/bin/datagrip; mode \\"default\\"'"
+  bindsym i exec --no-startup-id "i3-msg 'workspace 2; exec $HOME/.local/bin/idea; mode \\"default\\"'"
+  bindsym g exec --no-startup-id "i3-msg 'workspace 2; exec $HOME/.local/bin/goland; mode \\"default\\"'"
+  bindsym p exec --no-startup-id "i3-msg 'workspace 2; exec $HOME/.local/bin/pycharm; mode \\"default\\"'"
+  bindsym l exec --no-startup-id "i3-msg 'workspace 2; exec $HOME/.local/bin/clion; mode \\"default\\"'"
+  bindsym w exec --no-startup-id "i3-msg 'workspace 2; exec $HOME/.local/bin/webstorm; mode \\"default\\"'"
+  bindsym d exec --no-startup-id "i3-msg 'workspace 2; exec $HOME/.local/bin/datagrip; mode \\"default\\"'"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
@@ -234,7 +233,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+x focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
