--- a/i3/config
+++ b/i3/config
@@ -29,11 +29,11 @@ show_marks yes
 for_window [class=".*"] title_format "%title"
 
 # Theme colors
-client.focused     #ECEFF4      #5E81AC     #E5E9F0    #E5E9F0       #ECECEC
-client.focused_inactive   #4C556A     #ECEFF4    #2E3440     #ECECEC       #ECECEC
-client.unfocused   #ECEFF4      #ECEFF4    #171717     #ECECEC       #ECECEC
+client.focused     #4C566A      #5E81AC     #E5E9F0    #E5E9F0       #ECECEC
+client.focused_inactive   #4C556A     #4C566A    #2E3440     #ECECEC       #ECECEC
+client.unfocused   #4C566A      #4C566A    #171717     #ECECEC       #ECECEC
 client.urgent           #BF616A            #BF616A        #ffffff        #268BD2
-client.placeholder      #ECEFF4            #909090        #FFFFFF        #268BD2
+client.placeholder      #4C566A            #909090        #FFFFFF        #268BD2
 
 new_window pixel 0
 new_float pixel 0
@@ -91,6 +91,7 @@ assign [class="Microsoft-edge-dev"] $ws3
 assign [class="Nightly"] $ws3
 
 assign [class="netease-cloud-music"] $ws4
+assign [class="FeelUOwn"] $ws4
 
 assign [class="Steam"] $ws5
 
@@ -133,9 +134,10 @@ bindsym $mod1+c exec --no-startup-id code
 bindsym $mod+shift+s exec --no-startup-id flameshot gui
 bindsym $mod+shift+e exec --no-startup-id emacs
 bindsym $mod+z exec --no-startup-id zathura
+bindsym $mod+n exec --no-startup-id nmd
 bindsym $mod+shift+w exec --no-startup-id wps
 bindsym $mod+shift+n exec --no-startup-id thunar
-bindsym $mod+shift+m exec --no-startup-id netease-cloud-music
+bindsym $mod+shift+m exec --no-startup-id feeluown
 bindsym $mod+shift+v exec --no-startup-id VBoxManage startvm "WinDev2008Eval" --type gui
 bindsym $mod1+ctrl+Delete exec --no-startup-id betterlockscreen -l
 
@@ -182,7 +184,7 @@ mode "$mode_redshift" {
 
 # kill focused window
 bindsym $mod+q kill
-bindsym --release $mod1+q exec xkill
+bindsym --release $mod1+q exec --no-startup-id xkill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec rofi -show drun
