--- a/i3/config
+++ b/i3/config
@@ -29,11 +29,11 @@ show_marks yes
 for_window [class=".*"] title_format "%title"
 
 # Theme colors
-client.focused     #4C566A      #5E81AC     #E5E9F0    #E5E9F0       #ECECEC
-client.focused_inactive   #4C556A     #4C566A    #2E3440     #ECECEC       #ECECEC
-client.unfocused   #4C566A      #4C566A    #171717     #ECECEC       #ECECEC
+client.focused     #ECEFF4      #5E81AC     #E5E9F0    #E5E9F0       #ECECEC
+client.focused_inactive   #4C556A     #ECEFF4    #2E3440     #ECECEC       #ECECEC
+client.unfocused   #ECEFF4      #ECEFF4    #171717     #ECECEC       #ECECEC
 client.urgent           #BF616A            #BF616A        #ffffff        #268BD2
-client.placeholder      #4C566A            #909090        #FFFFFF        #268BD2
+client.placeholder      #ECEFF4            #909090        #FFFFFF        #268BD2
 
 new_window pixel 0
 new_float pixel 0
@@ -148,6 +148,11 @@ bindsym Print exec --no-startup-id "scrot 'Screenshot_%Y-%m-%d-%S_$wx$h.png' -e 
 bindsym $mod+Print exec --no-startup-id "scrot -d 5 'Screenshot_%Y-%m-%d-%S_$wx$h.png' -e 'mv $f $$(xdg-user-dir PICTURES) ; viewnior $$(xdg-user-dir PICTURES)/$f'"
 # Take a full screenshot to clipboard(need xclip installed)
 bindsym control+Print exec --no-startup-id "scrot '/tmp/%F_%T_$wx$h.png' -e 'xclip -selection clipboard -target image/png -i $f'"
+
+# enable and disable touchpad
+# reference: https://wiki.archlinux.org/index.php/Libinput#Disable_touchpad
+bindsym $mod+control+e exec --no-startup-id "xinput enable 'DELL0828:00 06CB:7E7E Touchpad'"
+bindsym $mod+control+d exec --no-startup-id "xinput disable 'DELL0828:00 06CB:7E7E Touchpad'"
 
 # IDEs start bindsym
 set $ides "[i]dea [c]lion [g]oland [p]ycharm [d]atagrip"
