--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -70,23 +70,23 @@ shadow-opacity = 0.5;
 
 
 # Opacity
-opacity = 0.9;			# The opacity for menus. (default 1.0)
-inactive-opacity = 0.9;			# Opacity of inactive windows. (0.1 - 1.0)
-frame-opacity = 0.8;			# Opacity of window titlebars and borders. (0.1 - 1.0)
+opacity = 1;			# The opacity for menus. (default 1.0)
+inactive-opacity = 0.8;			# Opacity of inactive windows. (0.1 - 1.0)
+frame-opacity = 1.0;			# Opacity of window titlebars and borders. (0.1 - 1.0)
 inactive-opacity-override = true;	# Inactive opacity set by 'inactive-opacity' overrides value of _NET_WM_OPACITY.
 
 opacity-rule = [
   "90:class_g = 'kitty-music'",
   "80:class_g = 'Alacritty'",
   "85:class_g = 'kitty'",
-  "80:class_g = 'Emacs'",
-  "90:class_g = 'Zathura'",
-  "90:class_g = 'Subl3'",
-  "90:class_g = 'Code'",
+#  "80:class_g = 'Emacs'",
+#  "90:class_g = 'Zathura'",
+#  "90:class_g = 'Subl3'",
+#  "90:class_g = 'Code'",
 #  "90:class_g = 'Google-chrome'",
 #  "90:class_g = 'Thunar'",
   "80:class_g *?= 'Rofi'",
-  "90:class_g = 'Code'",
+#  "90:class_g = 'Code'",
 #  "90:class_g = 'netease-cloud-music'",
 ];
 
